# DTU-Linux-Setup

./: .gitignore  CONTRIBUTING.md  KOC751iUX.ppd  LICENSE  Makefile  Print options  README.md  SECURITY.md  dtu-sustain-setup_1.0.0_all.deb  pyproject.toml
.github/workflows/: build-deb.yml
Nye/: dtu-setup-opensuse-tw (1).sh  dtu-setup-ubuntu (1).sh
data/: dk.dtu.sustain.setup.policy  dtu-sustain-setup.desktop  site.conf.example  software.conf
docs/: GUIDE.md  TPM2-LUKS-fejlfinding.md
examples/: dtu-ait.env  dtu-runtime.env.example  dtu-sustain.env
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: dtu-sustain-setup.spec
scripts/: common.sh  deploy-sync.yml  dtu-first-login.sh  dtu-setup-opensuse-tw.sh  dtu-setup-ubuntu.sh  fix-qdrive-user.sh  fix-user-setup.sh  install-software-manual.sh  reset-test-user.sh  setup-dtu-auto-update_Version4.sh  setup-sustain-printer.sh  setup-sync-homedir.sh  sync-homedir-login.sh  sync-homedir.sh  update-latest.sh
scripts/opensuse/: automount.sh  brother.sh  defender.sh  domain-join.sh  followme.sh  onedrive.sh  polkit.sh  qdrive.sh  software.sh  wifi.sh
scripts/systemd/: mdatp-quick-scan.service  mdatp-quick-scan.timer  sync-homedir.service  sync-homedir.timer
scripts/ubuntu/: ansible.sh  automount.sh  brother.sh  defender.sh  domain-join.sh  first-login-deploy.sh  followme.sh  kwallet.sh  onedrive.sh  polkit.sh  qdrive.sh  rdp.sh  software.sh  tpm2-enroll.sh  wifi.sh
src/dtu_sustain_setup/: __init__.py  __main__.py  distro.py  env_loader.py  error_dialog.py  input_dialog.py  main_window.py  (+1 more)
