[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu-sustain-setup"
version = "1.0.0"
description = "DTU Sustain Linux workstation setup tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4",
]

[project.scripts]
dtu-sustain-setup = "dtu_sustain_setup.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
